k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8085"
    spec:
      containers:
        - name: api-gateway
          image: 340529311540.dkr.ecr.us-east-1.amazonaws.com/api-gateway:latest
          ports:
            - containerPort: 8085
          volumeMounts:
            - name: gateway-config
              mountPath: /app/config/application.yml
              subPath: application.yml
      volumes:
        - name: gateway-config
          configMap:
            name: api-gateway-config
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: banking
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8085
      targetPort: 8085
