k8s/transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: nikitamathe/transaction-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: banking
spec:
  selector:
    app: transaction-service
  ports:
    - port: 8083
      targetPort: 8083
